--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello coursera</title>html>
-</head>head>
+	<title>Hello coursera</title>
+</head>
 <body>
-	<h1>Wecome to coursera. its a great course</h1>h1>
+	<h1>Wecome to coursera. its a great course</h1>
 </body>
 </html>
